[package]
name = "unlimited-ammo"
version = "0.2.0"
authors = ["Antonio Hickey <contact@antoniohickey.com>"]
description = "Hot reloader for Rust codebases, never waste time rebuilding again."
documentation = "https://docs.rs/unlimited-ammo/latest/unlimited-ammo/index.html"
homepage = "https://crates.io/crates/unlimited-ammo"
repository = "https://github.com/antonio-hickey/unlimited-ammo"
readme = "README.md"
keywords = ["build", "build-tools", "hot-reloader", "toolchain"]
license = "MIT"
exclude = ["/.github/"]
include = ["README.md", "src/**/*"]
edition = "2024"

[dependencies]
log = "0.4.25"
ratatui = "0.29.0"
crossterm = { version = "0.28.1" }
ansi-to-tui = "7.0.0"
chrono = "0.4"
unicode-segmentation = "1.12.0"
